# rag-research-agent

./: .gitignore  compose.yml
database/: init.sql
diagrams/: architecture.mermaid  schema.dbml
services/main-api/: Dockerfile  config.py  constants.py  db.py  log.py  main.py  pyproject.toml
services/main-api/auth/: config.py  router.py  schemas.py
services/main-api/user/: repository.py
